<resources>
    <string name="app_name">Caper 2015</string>
    <string name="parse_application_id" translatable="false">Dargzmu15Dr6cd7Ojch4cd7APWsxY7wQ91y6StYw</string>
    <string name="parse_client_key" translatable="false">3C9aEQnTUxnWa9At9kfdtMveJMZ2KaaehVfNhnRZ</string>
    <string name="loading">Loading...</string>
    <string name="updating">Updating...</string>
    <string name="update_data">Update</string>
    <string name="last_update">Last Update</string>
    <string name="settings_msg">An active internet connection is needed to update.</string>
    <string name="about_title">About this app</string>
    <string name="error_loading">UPS! No internet connection</string>
    <string name="reload_msg">Seems like no internet connection is available right now. Please make sure to be connected to refresh.</string>
    <string name="ok">REFRESH</string>
    <string name="cancel">EXIT</string>

    <string name="action_settings">Settings</string>

    <string name="stands_title">Exhibitors</string>
    <string name="events_title">Schedule</string>
    <string name="events_main_title">Schedule</string>
    <string name="maps_title">Floorplan</string>
    <string name="info_title">Info</string>
    <string name="favs_title">Favorites</string>
    <string name="settings_title">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_events" translatable="false">EventsActivity</string>
    <string name="title_activity_stands" translatable="false">StandsActivity</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="title_activity_info" translatable="false">InfoActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_favorites" translatable="false">FavoritesActivity</string>
    <string name="title_activity_schedule" translatable="false">ScheduleActivity</string>

    <string name="locations">Locations</string>
    <string name="people_company">Contacts</string>
    <string name="people_event">Speakers</string>
    <string name="actions">Contact</string>
    <string name="description">Description</string>
    <string name="companies">Participating Companies</string>
    <string name="social">Social</string>

    <string name="description_company">Main Activity</string>

    <string name="web">Web</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>

    <string name="contact_info">Contact Info</string>

    <string name="add_to_fav">[+] Add to Favorites</string>
    <string name="remove_from_fav">[-] Remove from Favorites</string>
    <string name="add_favs_msg">Add your favorite stands!</string>
    <string name="add_favs_sub">You can add stands to favorites from each stand\'s detail</string>

</resources>
