<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffe8e8e8">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/section_title_bg"
        android:textAppearance="@style/PrincipalTextStyle"
        android:textColor="@color/color_pallete_dark_gray"
        android:paddingLeft="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="40dp"
        android:textAllCaps="true"
        android:text="@string/last_update"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingRight="20dp">
        <TextView
            android:id="@+id/lastUpdateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PrincipalTextStyle"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:singleLine="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/updateDataLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="1dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PrincipalTextStyle"
            android:textColor="@color/color_pallete_red"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:text="@string/update_data"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/section_title_bg"
        android:textAppearance="@style/SecondaryTextStyle"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/settings_msg"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/aboutLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/list_item_bg">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/arrow"
            android:layout_centerInParent="true"
            android:gravity="left"
            android:textAppearance="@style/PrincipalTextStyle"
            android:textStyle="normal"
            android:text="@string/about_title"/>
    </RelativeLayout>

</LinearLayout>