<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/menubg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/caper_home_logo"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:layout_width="0dp"
                    android:layout_weight="6.5" />
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"></RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_dark_material_dark"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/eventsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/calendar"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/events_title"/>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/mapsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/map"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/maps_title"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/standsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/stand"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/stands_title"/>
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_dark_material_dark"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/infoButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            >
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/about"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/info_title"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/favsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/fav"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/favs_title"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/settings"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/settings_title"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
